Improve presentation info menu details
